--- a/css/style.css
+++ b/css/style.css
@@ -11098,16 +11098,39 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-.negro {
-  background-color: rgb(0, 0, 0);
-  color: white;
-}
-.negro a:hover {
-  color: white;
+.one {
+  background-color: gray;
+  color: black;
 }
 
-.blanco {
-  color: white;
+body {
+  background-image: url(../media/gym2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 100% 0%;
+  width: 100%;
+  height: 100vh;
+}
+
+@media (max-width: 1200px) {
+  body {
+    background-image: url(../media/gym2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+}
+header {
+  background-color: transparent !important;
+  margin: 0px;
+}
+
+.navbar-one {
+  margin: 0px;
+}
+
+.img-text {
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
