--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,3 +12,31 @@ $theme-colors: (
   background-color: gray;
   color: black;
 }
+
+body {
+  background-image: url(../media/gym2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 100% -0%;
+  width: 100%;
+  height: 100vh;
+}
+@media (max-width: 1200px) {
+  body {
+    background-image: url(../media/gym2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+}
+header {
+  background-color: transparent !important;
+  margin: 0px;
+}
+.navbar-one {
+  margin: 0px;
+}
+
+.img-text {
+  text-align: center;
+}
